Tue Jun 19 07:05:20 GMT+7 2012
libtiff: Added
  This is a requirement for Skype

+--------------------------+
Mon Jun 18 21:44:06 GMT+7 2012
pango: Upgraded
  Upgraded to 1.30.1

+--------------------------+
Sun Jun 17 11:23:05 GMT+7 2012
libusbx: Upgraded
  Upgraded to 1.0.12

+--------------------------+
Fri Jun 15 07:20:44 GMT+7 2012
skype: Added
  This is an updated Skype SlackBuild script

+--------------------------+
Sun Jun 10 10:20:41 GMT+7 2012
libdc1394: Added
  This is an optional requirement for digiKam

+--------------------------+
Fri Jun  8 08:52:03 GMT+7 2012
libpgf: Added
  This is an optional requirement for digiKam
  
+--------------------------+
Fri Jun  8 07:46:38 GMT+7 2012
digiKam: Upgraded to 2.6.0
lensfun: Added
  This is an optional requirement for digiKam
  
+--------------------------+
Thu Jun  7 14:00:21 GMT+7 2012
OpenCV: Added
  This package is needed to compile digiKam

+--------------------------+
Fri Jun  1 07:50:45 GMT+7 2012
libgpod: Added
taglib: Added
  These two new libraries are taken from Slackware's Slackbuild script and upgraded 
  to the latest version in preparations to compile Amarok 2.6.0 Beta 1

+--------------------------+
Tue May 29 15:16:44 GMT+7 2012
pycrypto: Upgraded to 2.6

+--------------------------+
Sun May 27 07:06:07 GMT+7 2012
guvcview: Upgraded to 1.6.0
  New optional dependency: PulseAudio
  Please read the README for configure option
  
+--------------------------+
Thu May 24 06:40:44 GMT+7 2012
powertop: Removed
  This version has been included in the -Current update per May 24

+--------------------------+
Wed May 23 12:49:06 GMT+7 2012
httperf: Added
  This is a SlackBuilds for httperf, HTTP Load Generator

+--------------------------+
Wed May 23 05:59:37 GMT+7 2012
gstreamer: Added
gst-plugins-base: Added
gst-plugins-good: Added
gst-plugins-bad: Added
gst-plugins-ugly: Added
  This is a SlackBuilds for GStreamer and gst-plugins-*