@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|'
+# on the right side marks the last column you can put a character in.  You must
+# make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':'.
+
+         |-----handy-ruler------------------------------------------------------|
+wireshark: WireShark (packet sniffer and protocol analyzer)
+wireshark:
+wireshark: Wireshark (aka Ethereal) is a free packet sniffer computer 
+wireshark: application.  It is used for network troubleshooting, analysis, 
+wireshark: software and communications, protocol development and education. 
+wireshark:
+wireshark: Wireshark uses the cross-platform GTK+ widget toolkit.  Its 
+wireshark: powerful features make it the tool of choice for network 
+wireshark: troubleshooting, protocol development, and education worldwide.
+wireshark:
+wireshark:
