@@ -1,0 +1,7 @@
+PRGNAM="wireshark"
+VERSION="1.8.0"
+HOMEPAGE="http://www.wireshark.org/"
+DOWNLOAD="http://wiresharkdownloads.riverbed.com/wireshark/src/wireshark-1.8.0.tar.bz2"
+MD5SUM="3eca81253800a0089d0f957e75853b05"
+DOWNLOAD_x86_64=""
+MD5SUM_x86_64=""
