@@ -1,3 +1,8 @@
+Fri Jun 22 10:06:44 GMT+7 2012
+wireshark: Added
+  This is an updated Skype SlackBuild script from SBo project
+
++--------------------------+
 Tue Jun 19 07:05:20 GMT+7 2012
 libtiff: Added
   This is a requirement for Skype
